# LikasLens

./: .gitignore  .syncpackrc  AGENTS.md  AUTH_SETUP_GUIDE.md  BACKEND_RECOVERY.md  DATA_DRIVEN_PROGRESS_BARS.md  FIXES_APPLIED.md  GIT_MERGE_FIX.md  GIT_UNSTAGED_FIX.md  ISSUES_AND_RESOLUTION.md  LikasLens Copilot Skills Library.md  MERGE_CONFLICT_RESOLUTION.md  PHASE_2_SETUP.md  README.md  SETUP_COMPLETE.md  SYSTEM_STATUS.md  TROUBLESHOOTING_PNPM_DEV.md  UI_UX_IMPROVEMENTS_COMPLETE.md  VS_CODE_GIT_FIX.md  ai-roadmap.md  clean-install.bat  clean-install.sh  fix-backend.bat  likaslens_status_report05-15-26.md  package.json  pnpm-lock.conflicted.yaml  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
.github/: copilot-instructions.md
.github/agents/: Likas-Backend-Engineer.agent.md  Likas-Frontend-Expert.agent.md  Likas-Neuro-Engine.agent.md
.github/instructions/: Global Constitution.instructions.md  design para pretty.instructions.md  frontend-accessibility-guard.instructions.md
.github/workflows/: deploy-ai-service.yml  likaslens-ai-service-AutoDeployTrigger-246f1a2c-6c72-4a80-b0b8-906dda9f04e9.yml  likaslens-backend-AutoDeployTrigger-03d66e26-917e-4e72-b9d3-b716a27a2988.yml
.mcp/: .gitignore  SETUP.md  servers.json
apps/ai-service/: .env.example  COSMOS_GREMLIN_SETUP_GUIDE.md  Dockerfile  chat_proxy.py  graph_topology.py  gremlin_bootstrap.py  gremlin_client.py  hazard_analyzer.py  image_analysis.py  main.py  pyproject.toml  requirements.txt
apps/ai-service/gremlin_upserts/: baseline_rules.py
apps/ai-service/migrations/: 2026_05_13_baseline_rules.py
(+780 files in other folders)
