[project]
name = "ai-service"
version = "0.1.0"
description = "LikasLens AI microservice for neuro-symbolic processing"
authors = [
    {name = "Jeff",email = "jeffmartinez@isufst.edu.ph"}
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.8.0",
    "gremlinpython>=3.7.3",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "uvicorn main:app --reload --port 8000"
